# moos_formation_path

./: README.md  planning_notes.txt
format_converters/: alog_to_traj.py  range_only_to_moos_coords.py
format_converters/trajs/: 10_0_0_0.txt  10_0_0_9.txt  10_0_9_0.txt  10_0_9_9.txt  10_9_0_0.txt  10_9_0_9.txt  10_9_9_0.txt  10_9_9_9.txt  6_agents_rect_range_only.txt
missions/lcgp_test/: README  launch.sh  launch_control.sh  launch_line_scenario.sh  launch_planner.sh  launch_simple_scenario.sh  meta_agent.bhv  meta_potential_planner.bhv  meta_shoreside.moos  meta_vehicle.moos  plug_pAvoidAgents.moos  plug_pAvoidObstacles.moos  plug_pCommsMgr.moos  plug_pEOptimality.moos  plug_pGenObstacle.moos  plug_pHelmIvP.moos  plug_pLocalize.moos  plug_pShare.moos  plug_pTrajToWaypoints.moos  plug_pWaypoints.moos  plug_uFldContactRangeSensor.moos  plug_uSimMarine.moos  targ_agent1.bhv  targ_agent1.moos  targ_agent2.moos  targ_agent3.moos  targ_agent4.bhv  targ_agent4.moos  targ_shoreside.moos
missions/lcgp_test/LOG_AGENT1_3_8_2021_____18_06_13/: LOG_AGENT1_3_8_2021_____18_06_13._moos  LOG_AGENT1_3_8_2021_____18_06_13.slog  LOG_AGENT1_3_8_2021_____18_06_13.ylog
missions/lcgp_test/LOG_AGENT2_3_8_2021_____18_06_14/: LOG_AGENT2_3_8_2021_____18_06_14._moos  LOG_AGENT2_3_8_2021_____18_06_14.slog  LOG_AGENT2_3_8_2021_____18_06_14.ylog  targ_agent2._bhv
missions/lcgp_test/LOG_AGENT3_3_8_2021_____18_06_14/: LOG_AGENT3_3_8_2021_____18_06_14._moos  LOG_AGENT3_3_8_2021_____18_06_14.slog  LOG_AGENT3_3_8_2021_____18_06_14.ylog  targ_agent3._bhv
missions/lcgp_test/LOG_AGENT4_3_8_2021_____18_06_14/: LOG_AGENT4_3_8_2021_____18_06_14._moos  LOG_AGENT4_3_8_2021_____18_06_14.slog  LOG_AGENT4_3_8_2021_____18_06_14.ylog
missions/lcgp_test/LOG_SHORESIDE_3_8_2021_____18_06_15/: LOG_SHORESIDE_3_8_2021_____18_06_15._moos  LOG_SHORESIDE_3_8_2021_____18_06_15.slog  LOG_SHORESIDE_3_8_2021_____18_06_15.ylog
missions/leader_test/: launch.sh  meta_leader.bhv  meta_shoreside.moos  meta_vehicle.moos  plug_pGenObstacle.moos  plug_pObstacleMgr.moos  plug_pTrajToWaypoints.moos  plug_uFldNodeBroker.moos  targ_leader.moos  targ_shoreside.moos
missions/leader_test/LOG_%(VNAME)_12_7_2021_____15_40_14/: LOG_%(VNAME)_12_7_2021_____15_40_14._moos  LOG_%(VNAME)_12_7_2021_____15_40_14.alog  LOG_%(VNAME)_12_7_2021_____15_40_14.slog  LOG_%(VNAME)_12_7_2021_____15_40_14.ylog
missions/leader_test/LOG_%(VNAME)_12_7_2021_____15_43_51/: LOG_%(VNAME)_12_7_2021_____15_43_51._moos  LOG_%(VNAME)_12_7_2021_____15_43_51.alog  LOG_%(VNAME)_12_7_2021_____15_43_51.slog  LOG_%(VNAME)_12_7_2021_____15_43_51.ylog
missions/leader_test/LOG_LEADER_12_7_2021_____15_40_14/: LOG_LEADER_12_7_2021_____15_40_14._moos  LOG_LEADER_12_7_2021_____15_40_14.alog  LOG_LEADER_12_7_2021_____15_40_14.slog  LOG_LEADER_12_7_2021_____15_40_14.ylog
missions/leader_test/LOG_LEADER_12_7_2021_____15_43_50/: LOG_LEADER_12_7_2021_____15_43_50._moos  LOG_LEADER_12_7_2021_____15_43_50.slog  LOG_LEADER_12_7_2021_____15_43_50.ylog  targ_leader._bhv
missions/trail_test/: .LastOpenedMOOSLogDirectory  launch.sh  meta_follower.bhv  meta_leader.bhv  meta_shoreside.moos  meta_vehicle.moos  plug_pContactMgrV20.moos  plug_pHelmIvP.moos  plug_pNodeReporter.moos  plug_pRangeToPosition.moos  plug_pShare.moos  plug_uFldContactRangeSensor.moos  plug_uFldNodeBroker.moos  targ_follower_1.moos  targ_follower_2.moos  targ_leader.moos  targ_shoreside.moos
missions/trail_test/LOG_%(VNAME)_12_7_2021_____15_43_12/: LOG_%(VNAME)_12_7_2021_____15_43_12._moos  LOG_%(VNAME)_12_7_2021_____15_43_12.slog  LOG_%(VNAME)_12_7_2021_____15_43_12.ylog
missions/trail_test/LOG_%(VNAME)_12_7_2021_____15_49_06/: LOG_%(VNAME)_12_7_2021_____15_49_06._moos  LOG_%(VNAME)_12_7_2021_____15_49_06.alog  LOG_%(VNAME)_12_7_2021_____15_49_06.slog  LOG_%(VNAME)_12_7_2021_____15_49_06.ylog
missions/trail_test/LOG_FOLLOWER_1_12_7_2021_____15_43_11/: LOG_FOLLOWER_1_12_7_2021_____15_43_11._moos  LOG_FOLLOWER_1_12_7_2021_____15_43_11.slog  LOG_FOLLOWER_1_12_7_2021_____15_43_11.ylog  targ_follower_1._bhv
missions/trail_test/LOG_FOLLOWER_1_12_7_2021_____15_49_05/: LOG_FOLLOWER_1_12_7_2021_____15_49_05._moos  LOG_FOLLOWER_1_12_7_2021_____15_49_05.slog  LOG_FOLLOWER_1_12_7_2021_____15_49_05.ylog
missions/trail_test/LOG_FOLLOWER_2_12_7_2021_____15_43_11/: LOG_FOLLOWER_2_12_7_2021_____15_43_11._moos  LOG_FOLLOWER_2_12_7_2021_____15_43_11.slog  LOG_FOLLOWER_2_12_7_2021_____15_43_11.ylog  targ_follower_2._bhv
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_PotentialPlanner.cpp  BHV_PotentialPlanner.h  CMakeLists.txt
src/pAvoidAgents/: AvoidAgents.cpp  AvoidAgents.h  AvoidAgents_Info.cpp  AvoidAgents_Info.h  CMakeLists.txt  main.cpp  pAvoidAgents.moos
src/pAvoidObstacles/: AvoidObstacles.cpp  AvoidObstacles.h  AvoidObstacles_Info.cpp  AvoidObstacles_Info.h  CMakeLists.txt  main.cpp  pAvoidObstacles.moos
src/pCommsMgr/: CMakeLists.txt  CommsMgr.cpp  CommsMgr.h  CommsMgr_Info.cpp  CommsMgr_Info.h  main.cpp  pCommsMgr.moos
src/pEOptimality/: CMakeLists.txt  EOptimality.cpp  EOptimality.h  EOptimality_Info.cpp  EOptimality_Info.h  main.cpp  pEOptimality.moos
src/pGenObstacle/: CMakeLists.txt  GenObstacle.cpp  GenObstacle.h  GenObstacle_Info.cpp  GenObstacle_Info.h  main.cpp  pGenObstacle.moos
src/pLocalize/: CMakeLists.txt  Localize.cpp  Localize.h  Localize_Info.cpp  Localize_Info.h  main.cpp  pLocalize.moos
src/pRRT/: CMakeLists.txt  RRT.cpp  RRT.h  RRT_Info.cpp  RRT_Info.h  main.cpp  pRRT.moos
src/pRangeToPosition/: CMakeLists.txt  RangeToPosition.cpp  RangeToPosition.h  RangeToPosition_Info.cpp  RangeToPosition_Info.h  main.cpp  pRangeToPosition.moos
src/pRigidityMetric/: CMakeLists.txt  RigidityMetric.cpp  RigidityMetric.h  RigidityMetric_Info.cpp  RigidityMetric_Info.h  main.cpp  pRigidityMetric.moos
src/pTrajToWaypoints/: CMakeLists.txt  TrajToWaypoints.cpp  TrajToWaypoints.h  TrajToWaypoints_Info.cpp  TrajToWaypoints_Info.h  main.cpp  pTrajToWaypoints.moos
src/pWaypoints/: CMakeLists.txt  Waypoints.cpp  Waypoints.h  Waypoints_Info.cpp  Waypoints_Info.h  main.cpp  pWaypoints.moos
(+118 files in other folders)
